# Forschungspraktikum

./: .gitignore  CMakeLists.txt
generators/ANTLR4/: CMakeLists.txt
pdf/: Antlr4.tex  main.aux  main.fdb_latexmk  main.fls  main.tex
src/: antlr4_parser.cpp  antlr4_parser.h  base_parser.h  ebnf_antlr4_ast_gen.cpp  ebnf_antlr4_ast_gen.h  ebnf_ast.h  main.cpp  parser_chooser.cpp  parser_chooser.h  stack_collection.cpp  stack_collection.h  time_measurement.cpp  time_measurement.h
textgenerator/: TextGenerator.py  TextGeneratorIncremental.py
textgenerator/ebnf/: ebnf_500KB.txt  ebnf_501KB.txt  ebnf_502KB.txt  ebnf_503KB.txt  ebnf_504KB.txt  ebnf_505KB.txt  ebnf_506KB.txt  ebnf_507KB.txt  ebnf_508KB.txt  ebnf_509KB.txt  ebnf_510KB.txt  ebnf_511KB.txt  ebnf_512KB.txt  ebnf_513KB.txt  ebnf_514KB.txt  ebnf_515KB.txt  ebnf_516KB.txt  ebnf_517KB.txt  ebnf_518KB.txt  ebnf_519KB.txt  ebnf_520KB.txt  ebnf_521KB.txt  ebnf_522KB.txt  ebnf_523KB.txt  ebnf_524KB.txt  ebnf_525KB.txt  ebnf_526KB.txt  ebnf_527KB.txt  ebnf_528KB.txt  ebnf_529KB.txt  ebnf_530KB.txt  ebnf_531KB.txt  ebnf_532KB.txt  ebnf_533KB.txt  ebnf_534KB.txt  ebnf_535KB.txt  ebnf_536KB.txt  ebnf_537KB.txt  ebnf_538KB.txt  ebnf_539KB.txt  (+12 more)
textgenerator/expression_lists/: expression_10KB.txt  expression_11KB.txt  expression_12KB.txt  expression_13KB.txt  expression_14KB.txt  expression_15KB.txt  expression_16KB.txt  expression_17KB.txt  expression_18KB.txt  (+42 more)
timings/: deeply_nested_expressions_timings_antlr4.txt  ebnf_antlr4.txt  expression_list_timings_antlr4.txt  semantic_actions_antlr4.txt
utils/: evaluation.py
(+102 files in other folders)
